0.0.4
	Bugfixes on shorttimeclients/AnonymousUsers
0.0.3
	Update views when clients disconnects unintentionally
	Update branches live view with active and inactive clients
	More detailed log message for cronjob
	Don't use whenever gem to create cronjob
	Show library card number instead of user's real name in logged in window
	Client IP-address not required
0.0.2
	Initial release