@@ -151,6 +151,18 @@ div class="main"
           span[id="time_info" class="info" style="margin-left:48px"]
           span[id="time_error" class="error" style="margin-left:48px"]
 
+  p Angi lengde på sesjoner på korttidsmaskiner:
+  div class="divdot inputf"
+    span[class="inherited" id="shorttime_inherited" style="margin:7px; #{'display:none' unless branch.options.shorttime_limit.nil? }"]Disse innstillingene er arvet:
+    table class="genform"
+      tr
+        td minutter per dag
+        td: input[type="text" id="shorttime_limit" class="nr" value="#{branch.options_self_or_inherited['shorttime_limit']}"]
+        td: button[type='button' id="shorttime_save"]  = "Lagre"
+        td
+          span[id="shorttime_info" class="info" style="margin-left:48px"]
+          span[id="shorttime_error" class="error" style="margin-left:48px"]
+
   h3 Hjemmeside
   p Startside til klientens nettleser.
   div class="divdot inputf"
