@@ -1,3 +1,4 @@
+	Allow changing of shorttimemachine time limit in admin interface
 0.0.4
 	Bugfixes on shorttimeclients/AnonymousUsers
 0.0.3
